<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/verde_fondo"
    tools:context=".ActividadRegister">


    <ImageView
        android:id="@+id/imagenLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="67dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_adopatamasapp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvLogin"
        android:layout_width="356dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagenLogo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/crear_cuenta"
                android:textAlignment="center"
                android:textColor="@color/text_dark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/unete_a_nuestra_comunidad"
                android:textAlignment="center"
                android:textColor="@color/gray"
                android:textSize="14sp"
                android:layout_marginBottom="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tipo_de_cuenta"
                android:textStyle="bold"
                android:textColor="@color/text_dark"
                android:textSize="13sp" />

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/toggleGroupRol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp"
                app:singleSelection="true"
                app:checkedButton="@id/btnAdoptante"
                app:selectionRequired="true">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnAdoptante"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="Adoptante"
                    app:icon="@drawable/usuario"
                    android:textAllCaps="false" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnRefugio"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="Refugio"
                    app:icon="@drawable/empresa50white"
                    android:textAllCaps="false" />
            </com.google.android.material.button.MaterialButtonToggleGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Nombre completo"
                android:textStyle="bold"
                android:textColor="@color/text_dark"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/etNombreCompleto"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/fondo_escribir_texto"
                android:hint="@string/ejemplo_nombre"
                android:paddingStart="15dp"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/correo_electronico_label"
                android:textStyle="bold"
                android:textColor="@color/text_dark"
                android:textSize="13sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false"
                app:startIconDrawable="@drawable/email"
                app:startIconTint="@color/gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etRegistroCorreo"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/fondo_escribir_texto"
                    android:hint="@string/texto_correo_ejemplo"
                    android:inputType="textEmailAddress"
                    android:paddingStart="40dp"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/contrasenia"
                android:textStyle="bold"
                android:textColor="@color/text_dark"
                android:textSize="13sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/ic_candado_ajustado"
                app:startIconTint="@color/gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etRegistroPass"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/fondo_escribir_texto"
                    android:hint="@string/asteriscos"
                    android:inputType="textPassword"
                    android:paddingStart="40dp"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnCrearCuenta"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="20dp"
                android:text="Crear Cuenta"
                android:textColor="@color/white"
                android:backgroundTint="@color/primary_color"
                app:cornerRadius="10dp" />

            <TextView
                android:id="@+id/tvIrALogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                android:text="Ya tienes una cuenta? Iniciar Sesión"/>

        </LinearLayout>


    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>