<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="8dp"
    app:cardCornerRadius="16dp"
    app:strokeColor="@color/primary_color"
    app:strokeWidth="1dp"
    app:cardElevation="1dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imgUserIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="#f1f8e6"
            android:padding="2dp"
            android:src="@drawable/usuario"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full"
            android:tint="@color/primary_color"
            />
        <TextView
            android:id="@+id/tvNombreUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/maria_garcia"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/imgUserIcon"
            app:layout_constraintTop_toTopOf="@id/imgUserIcon" />

        <TextView
            android:id="@+id/tvEmailUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maria_email_com"
            android:textColor="@color/gray"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="@id/tvNombreUsuario"
            app:layout_constraintTop_toBottomOf="@id/tvNombreUsuario" />
        <TextView
            android:id="@+id/tvFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha_ejemplo"
            android:textColor="@color/gray"
            android:textSize="12sp"
            android:drawablePadding="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvNombreUsuario" />

        <LinearLayout
            android:id="@+id/containerInteres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="#F9F9F9"
            android:orientation="vertical"
            android:padding="12dp"
            app:layout_constraintTop_toBottomOf="@id/imgUserIcon">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interesado_en"
                android:textColor="@color/gray"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvMascotaInteres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/luna"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvContenidoMensaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/hola_estoy_interesada_en_adoptar_a_luna_podr_a_visitarla_este_fin_de_semana"
            android:textColor="#555555"
            android:lineSpacingExtra="3dp"
            app:layout_constraintTop_toBottomOf="@id/containerInteres" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnResponder"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/responder"
            android:textColor="@color/white"
            app:backgroundTint="#1DB954"
            app:icon="@drawable/email"
            app:iconGravity="textStart"
            app:iconTint="@color/white"
            app:layout_constraintTop_toBottomOf="@id/tvContenidoMensaje" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>