<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MensajesFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <View
            android:id="@+id/headerBackground"
            android:layout_width="match_parent"
            android:layout_height="116dp"
            android:background="@drawable/bg_dashboard_header"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mensajes"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tvSubtitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/consulta_de_usuarios_interesados"
            android:textColor="#CCFFFFFF"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitulo"/>

        <LinearLayout
            android:id="@+id/layoutCards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp"
            android:layout_marginTop="20dp"
            android:weightSum="3"
            app:layout_constraintTop_toBottomOf="@id/tvSubtitulo">
        </LinearLayout>

        <TextView
            android:id="@+id/labelMensajes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mensajes_recibidos"
            android:textSize="18sp"
            android:textColor="#343434"
            android:layout_marginStart="24dp"
            android:layout_marginTop="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/headerBackground"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardMensajes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/tag_color"
            app:cardCornerRadius="10dp"
            android:forceDarkAllowed="false"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/labelMensajes"
            app:layout_constraintBottom_toBottomOf="@id/labelMensajes">

            <TextView
                android:id="@+id/tvCantidadMensajes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_4_nuevos"
                android:textColor="@android:color/white"
                android:textSize="11sp"
                android:textStyle="bold"
                android:paddingHorizontal="10dp"
                android:paddingVertical="5dp"/>
        </com.google.android.material.card.MaterialCardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMensaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginHorizontal="16dp"
            android:paddingBottom="16dp"
            android:clipToPadding="false"
            android:nestedScrollingEnabled="false"
            app:layout_constraintTop_toBottomOf="@id/labelMensajes"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>